1. 更新配置信息 2. 删除不重要的内容 3. 统一接口规范 4. 调整文件位置以及文件名称